docs/apache-airflow-providers-mysql/2.1.1/_sources/_api/airflow/providers/mysql/operators/mysql/index.rst.txt
:py:mod:`airflow.providers.mysql.operators.mysql`
=================================================

.. py:module:: airflow.providers.mysql.operators.mysql


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.mysql.operators.mysql.MySqlOperator




.. py:class:: MySqlOperator(*, sql: Union[str, List[str]], mysql_conn_id: str = 'mysql_default', parameters: Optional[Union[Mapping, Iterable]] = None, autocommit: bool = False, database: Optional[str] = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Executes sql code in a specific MySQL database

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:MySqlOperator`

   :param sql: the sql code to be executed. Can receive a str representing a
       sql statement, a list of str (sql statements), or reference to a template file.
       Template reference are recognized by str ending in '.sql'
       (templated)
   :type sql: str or list[str]
   :param mysql_conn_id: Reference to :ref:`mysql connection id <howto/connection:mysql>`.
   :type mysql_conn_id: str
   :param parameters: (optional) the parameters to render the SQL query with.
       Template reference are recognized by str ending in '.json'
       (templated)
   :type parameters: dict or iterable
   :param autocommit: if True, each command is automatically committed.
       (default value: False)
   :type autocommit: bool
   :param database: name of database which overwrite defined one in connection
   :type database: str

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['sql', 'parameters']

      

   .. py:attribute:: template_fields_renderers
      

      

   .. py:attribute:: template_ext
      :annotation: :Sequence[str] = ['.sql', '.json']

      

   .. py:attribute:: ui_color
      :annotation: = #ededed

      

   .. py:method:: prepare_template(self) -> None

      Parse template file for attribute parameters.


   .. py:method:: execute(self, context: airflow.utils.context.Context) -> None

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



